# papermake

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  REVIEW-1.md  docker-compose.yml
.github/workflows/: ci.yml
crates/papermake/: Cargo.toml
crates/papermake-registry/: Cargo.toml
crates/papermake-registry/src/: address.rs  batch.rs  bundle.rs  error.rs  lib.rs  manifest.rs  reference.rs  registry.rs
crates/papermake-registry/src/registry/: batch.rs  history.rs  mod.rs  publish.rs  render.rs  templates.rs  tests.rs
crates/papermake-registry/src/render_storage/: aggregator.rs  clickhouse.rs  layout.rs  mod.rs  retention.rs  s3_buffered.rs  summary.rs  types.rs
crates/papermake-registry/src/storage/: blob_storage.rs  filesystem.rs  mod.rs  s3_storage.rs
crates/papermake-server/: Cargo.toml  Dockerfile
crates/papermake-server/assets/: app.css  template-detail.js
crates/papermake-server/locales/de/: main.ftl
crates/papermake-server/locales/en/: main.ftl
crates/papermake-server/src/: config.rs  error.rs  i18n.rs  main.rs  openapi.rs
crates/papermake-server/src/models/: api.rs  mod.rs
crates/papermake-server/src/routes/: analytics.rs  jobs.rs  mod.rs  render.rs  renders.rs  templates.rs  ui.rs
crates/papermake-server/src/routes/ui/: charts.rs  infer.rs  mod.rs  pages.rs  tests.rs
crates/papermake-worker/: Cargo.toml  Dockerfile
crates/papermake-worker/src/: main.rs
crates/papermake/src/: error.rs  lib.rs  render.rs  typst.rs
crates/papermake/tests/: render_tests.rs
deploy/k8s/: README.md  configmap.yaml  ingress.yaml  kustomization.yaml  maintenance-worker-deployment.yaml  namespace.yaml  render-worker-deployment.yaml  secret.example.yaml  server-deployment.yaml  server-service.yaml
docs/: README.md  analytics-and-retention.md  analytics-storage-and-ssr.md  api.md  getting-started.md  self-hosting.md  templates.md
docs/explanation/: analytics-and-retention.md  architecture.md  security.md
docs/how-to/: batch-rendering.md  kubernetes.md  operations.md  self-hosting.md  templates.md
docs/reference/: api.md  configuration.md  templates.md
docs/tutorials/: getting-started.md
seaweedfs/: s3.json
