[package]
name = "papermake-registry"
version = "0.8.0"
edition = "2024"
description = "Template registry and versioning system for papermake"
license = "Apache-2.0"
repository = "https://github.com/jpraetorius/papermake"
documentation = "https://docs.rs/papermake-registry"
homepage = "https://github.com/jpraetorius/papermake"
readme = "README.md"
keywords = ["pdf", "typst", "templates", "registry", "versioning"]
categories = ["template-engine"]
# Original author retained for attribution (Apache-2.0); fork maintained by JPR.
authors = ["Erik Steiger", "Joachim Praetorius"]

[dependencies]
papermake = { path = "../papermake", version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
time = { version = "0.3", features = ["serde", "macros"] }
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
sha2 = "0.11"
tracing = "0.1"

# Optional features
tokio = { version = "1.52", features = ["fs", "rt", "sync", "time"], optional = true }

# BlobStorage Backends
minio = { version = "0.4.0", optional = true }
futures-util = { version = "0.3", optional = true }
bytes = { version = "1.0", optional = true }

[features]
default = ["s3"]
s3 = ["minio", "futures-util", "bytes", "tokio"]
memory = []

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"
