[package]
name = "papermake-worker"
version = "0.8.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/jpraetorius/papermake"
authors = ["Erik Steiger", "Joachim Praetorius"]

[dependencies]
papermake = { path = "../papermake" }
papermake-registry = { path = "../papermake-registry" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["macros"] }
dotenv = "0.15"
