[package]
name = "papermake"
version = "0.8.0"
edition = "2024"
description = "Fast PDF generation library using Typst with schema validation and caching"
license = "Apache-2.0"
repository = "https://github.com/jpraetorius/papermake"
documentation = "https://docs.rs/papermake"
homepage = "https://github.com/jpraetorius/papermake"
readme = "../../README.md"
keywords = ["pdf", "typst", "template", "document", "generation"]
categories = ["template-engine", "text-processing", "rendering"]
# Original author retained for attribution (Apache-2.0); fork maintained by JPR.
authors = ["Erik Steiger", "Joachim Praetorius"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = [
    "serde",
    "macros",
    "formatting",
    "parsing",
] }
async-trait = "0.1"
tokio = { version = "1.52", features = ["fs", "sync", "rt"], optional = true }
# Typst
typst = "0.15"
typst-kit = { version = "0.15", default-features = false, features = [
    "embedded-fonts",
    "scan-fonts",
] }
typst-library = "0.15"
typst-pdf = "0.15"
zune-inflate = { version = "0.2", default-features = false, features = [
    "gzip",
    "std",
] }
tar = "0.4"
flate2 = "1.1"
ttf-parser = "0.25"
once_cell = "1.21.3"

[dev-dependencies]
tempfile = "3.19"
tokio = { version = "1.52", features = ["full"] }
pdf = "0.10.0"


[features]
fs = ["tokio"]

default = ["fs"]
